--- a/frontend/src/sass/main.scss
+++ b/frontend/src/sass/main.scss
@@ -1,4 +1,6 @@
 @import
+  './components/_app',
+  './components/_datapanel',
   './components/_login',
   './components/_stateList',
   './components/_welcome';
