updating components and beginning graph module construction

--- a/frontend/src/sass/components/_datapanel.scss
+++ b/frontend/src/sass/components/_datapanel.scss
@@ -3,6 +3,8 @@
   left: 148px !important;
 }
 .datapanel {
+  width: 94%;
+  margin:0 auto;
   .panel-title {
     .state-title {
       display: inline-block;
