first graph available

--- a/frontend/src/sass/main.scss
+++ b/frontend/src/sass/main.scss
@@ -1,6 +1,7 @@
 @import
   './components/_app',
   './components/_datapanel',
+  './components/_graphs',
   './components/_login',
   './components/_stateList',
   './components/_welcome';
