really rough working copy of files... Going to create a new branch to cleanup all the work that was done.

--- a/frontend/src/sass/components/_app.scss
+++ b/frontend/src/sass/components/_app.scss
@@ -1,5 +1,51 @@
-.application {
-  .navbar.main-nav {
-    border-radius: 0;
+#app h1:first-child {
+  padding-bottom:10px;
+  margin-bottom: 0;
+}
+html, body, #app , #app div:first-child {
+  min-height: 100%;
+}
+
+#app {
+  .controlbar {
+    padding-top: 10px;
+    background-color: #efefef;
+    border-radius: 4px;
+    label {
+      display: inline-block;
+      margin-top: 7px;
+      font-weight: 200;
+    }
+    input[type=date] {
+      margin-bottom: 10px;
+      border-radius: 3px;
+      border: 1px solid #ddd;
+      height: 32px;
+      padding-left: 7px;
+    }
+    #state-selector {
+      margin-bottom: 10px;
+    }
   }
+}
+#date-range {
+  padding: 0 20px;
+}
+.d3-tip {
+  border: 1px solid #666;
+  border-radius: 2px;
+  padding: 3px;
+  background-color: rgba(255,255,255, 0.9);
+}
+/* Creates a small triangle extender for the tooltip */
+.d3-tip:after {
+  box-sizing: border-box;
+  display: inline;
+  font-size: 10px;
+  width: 100%;
+  line-height: 1.2;
+  color: rgba(0, 0, 0, 0.8);
+  content: "\25BC";
+  position: absolute;
+  text-align: center;
 }
