--- a/frontend/src/sass/components/_datapanel.scss
+++ b/frontend/src/sass/components/_datapanel.scss
@@ -5,6 +5,7 @@
 .datapanel {
   width: 94%;
   margin:0 auto;
+  margin-bottom: 20px;
   .panel-title {
     .state-title {
       display: inline-block;
