--- a/frontend/src/sass/main.scss
+++ b/frontend/src/sass/main.scss
@@ -1,6 +1,8 @@
 @import
+  './classic',
   './components/_app',
   './components/_datapanel',
+  './components/_dropdownmenu',
   './components/_graphs',
   './components/_login',
   './components/_stateList',
