--- a/frontend/src/sass/components/_graphs.scss
+++ b/frontend/src/sass/components/_graphs.scss
@@ -1,11 +1,14 @@
-.axis path,
-.axis line {
+.x-axis path,
+.y-axis path,
+.x-axis line,
+.y-axis line {
     fill: none;
     stroke: black;
     shape-rendering: crispEdges;
 }
 
-.axis text {
+.x-axis text,
+.y-axis text {
     font-family: sans-serif;
     font-size: 11px;
 }
